--- a/iptvgrotuvas/zip/index.html
+++ b/iptvgrotuvas/zip/index.html
@@ -158,6 +158,7 @@
 
             <div id="help_navi_l_player" style="">
                 <div id="screen_size"><div id="navi_button"><img src="img/buttons/psize.png"></img></div><span id="navi_helpertext"> Dydis</span></div>
+                <div id="navi_button"><img src="img/buttons/red.png"></img></div><span id="navi_helpertext"> Kalba</span>
                 <div id="navi_button"><img src="img/buttons/lr.png"></img></div><span id="navi_helpertext"> Garsas</span>
                 <div id="navi_button"><img src="img/buttons/ud.png"></img></div><span id="navi_helpertext">"P+/P-" keisti kanalus</span>
                 <div id="navi_button"><img src="img/buttons/exit.png"></img></div><span id="navi_helpertext">"EXIT" - Stop</span>
